--- a/css/buffon_needle.css
+++ b/css/buffon_needle.css
@@ -9,6 +9,15 @@ body {
     background-color: #CCCCCC;
 }
 
+#container {
+   width: 100%;
+   text-align:center;
+}
+
+canvas {
+   display: inline;
+}
+
 input {
     cursor: pointer;
 }
