--- a/css/buffon_needle.css
+++ b/css/buffon_needle.css
@@ -136,17 +136,24 @@ button:hover {
 }
 
 #statistics_panel {
-  position: fixed;
-  bottom: 40px;
+  bottom: 0;
   left: 35px;
-  padding: 5px;
+  padding: 10px;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
   color: black;
 }
 
+#statistics_panel h2 {
+  text-align: center;
+  margin-top: 2px;
+  padding: 2%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
 ul {
   list-style: none;
+  padding: 0;
 }
 
 #hits, .hits {
