--- a/css/buffon_needle.css
+++ b/css/buffon_needle.css
@@ -1,76 +1,77 @@
 body {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Roboto', sans-serif;
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Roboto', sans-serif;
 }
 
 #canvas {
-    border: 2px solid #444444;
-    background-color: #CCCCCC;
-    object-fit: contain;
-    width: 90%;
-    height: 90%;
+  border: 2px solid #444444;
+  background-color: #CCCCCC;
+  object-fit: contain;
+  width: 90%;
+  height: 90%;
 }
 
 #container {
-   width: 100%;
-   text-align:center;
+  width: 100%;
+  text-align:center;
 }
 
 canvas {
-   display: inline;
+  display: inline;
 }
 
 input {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 h1, h2 {
-    margin: 0px;
-    padding: 0px;
-    font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  font-weight: bold;
 }
 
 .header_title {
-    font-size: 120%;
-    font-weight: bold;
-    padding-bottom: 5px;
-    margin-top: -10px;
+  font-size: 120%;
+  font-weight: bold;
+  padding-bottom: 5px;
+  margin-top: -10px;
 }
 
 
 .panel {
-    position: fixed;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    border-radius: 8px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    cursor: default;
+  position: fixed;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: default;
 }
 
 .right_panel {
-    width: 250px;
-    right: 20px;
+  width: 250px;
+  right: 20px;
 }
 
 #introduction_panel {
-    right: 20px;
-    top: 50px;
-    text-align: justify;
-    max-width: 33%;
-    max-height: 100%;
-    overflow: auto;
+  right: 20px;
+  top: 8px;
+  text-align: justify;
+  min-width: 200px;
+  max-width: 33%;
+  max-height: 100%;
+  overflow: auto;
 }
 
 .formula {
-    text-align: center;
+  text-align: center;
 }
 
 #control_panel {
-    left: 20px;
-    top: 335px;
-    min-width: 180px;
+  left: 30%;
+  top: 320px;
+  min-width: 180px;
 }
 
 .tosses {
@@ -95,22 +96,21 @@ h1, h2 {
 }
 
 #instructions_panel {
-    top: 50px;
-    left: 20px;
-    text-align: justify;
+  top: 8px;
+  left: 20px;
+  text-align: justify;
 }
 
-#hide_instructions, #hide_introduction {
-    position: absolute;
-    right: 25px;
-    top: 10px;
-    font-size: 90%;
-    cursor: pointer;
+.hide {
+  position: absolute;
+  right: 25px;
+  top: 10px;
+  font-size: 90%;
+  cursor: pointer;
 }
 
-#hide_instruction:hover {
-    color: #fff;
-    text-decoration: underline;
+.hide:hover {
+  color: yellow;
 }
 
 .header_title {
@@ -118,14 +118,14 @@ h1, h2 {
 }
 
 button {
-    border: none;
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 5px;
-    font-size: 100%;
-    cursor: pointer;
-    padding: 2px 8px;
-    margin: 0 2%;
-    width: 28%;
+  border: none;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  font-size: 100%;
+  cursor: pointer;
+  padding: 2px 8px;
+  margin: 0 2%;
+  width: 28%;
 }
 
 .tosses {
@@ -144,7 +144,7 @@ button:hover {
 
 #statistics_panel {
   bottom: 0;
-  left: 35px;
+  left: 75px;
   padding: 10px;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 5px;
@@ -164,51 +164,55 @@ ul {
 }
 
 #hits, .hits {
-   color: green;
+  color: green;
 }
 
 #count, #hits, #misses, #estimate {
-   float: right;
+  float: right;
 }
 
 #misses, .misses {
-   color: red;
+  color: red;
 }
 
 #estimate, .estimate {
-   color: blue;
+  color: blue;
 }
 
 .pi {
-   padding-top: 10px;
+  padding-top: 10px;
 }
 
 a {
-    color: #33f;
+  color: #33f;
 }
 
 footer {
-    color: #333;
-    font-size: 70%;
-    text-align: center;
-    position: fixed;
-    width: 200px;
-    bottom: 10px;
-    left: 50%;
-    margin-left: -100px;
-    background: rgba(255, 255, 255, 0.5);
-    padding: 5px;
-    border-radius: 5px;
+  color: #333;
+  font-size: 70%;
+  text-align: center;
+  position: fixed;
+  width: 200px;
+  bottom: 10px;
+  left: 50%;
+  margin-left: -100px;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .white {
-    color: #fff;
+  color: white;
+}
+
+.yellow {
+  color: yellow;
 }
 
 .hits {
-    color: #0d0;
+  color: green;
 }
 
 .misses {
-    color: #ff9166;
+  color: red;
 }
